--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   dio: ^5.7.0
   retrofit: ^4.4.1
   pretty_dio_logger: ^1.4.0
+  get_it: ^8.0.0
+  injectable: ^2.5.0
 
 # Geliştirme ve test süreçlerinde kullanılır
 # Uygulamanın çalışması sırasında gerekli değildir.
@@ -29,6 +31,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   # Linting & Code Quality
+  injectable_generator: ^2.6.2
   json_serializable: ^6.8.0
   retrofit_generator: ^9.1.2
   very_good_analysis: ^6.0.0
