--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   get_it: ^8.0.0
   injectable: ^2.5.0
+  dartz: ^0.10.1
 
 # Geliştirme ve test süreçlerinde kullanılır
 # Uygulamanın çalışması sırasında gerekli değildir.
