Formz paketi projeye eklendi

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   dartz: ^0.10.1
   flutter_secure_storage: ^4.2.1
   shared_preferences: ^2.3.2
+  formz: ^0.7.0
 
 # Geliştirme ve test süreçlerinde kullanılır
 # Uygulamanın çalışması sırasında gerekli değildir.
