--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   formz: ^0.7.0
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10+1
+  go_router: ^14.3.0
 
 # Geliştirme ve test süreçlerinde kullanılır
 # Uygulamanın çalışması sırasında gerekli değildir.
