--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,11 @@ dependencies:
   get_it: ^8.0.0
   injectable: ^2.5.0
   dartz: ^0.10.1
-  flutter_secure_storage: ^4.2.1
+  flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.2
   formz: ^0.7.0
   flutter_bloc: ^8.1.6
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.10
   go_router: ^14.3.0
 
 # Geliştirme ve test süreçlerinde kullanılır
@@ -57,7 +57,6 @@ flutter:
   
  # Uygulama varlıklarını (assets) projeye dahil et
   assets:
-    - assets/icons/
     - assets/logos/
 
 # FlutterGen Paketi Ayarları
