--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,14 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10
   go_router: ^14.3.0
+  envied: ^0.5.4+1
 
 # Geliştirme ve test süreçlerinde kullanılır
 # Uygulamanın çalışması sırasında gerekli değildir.
 # Derlenmiş projeye dahil edilmez.
 dev_dependencies:
   build_runner: ^2.4.13
+  envied_generator: ^0.5.4+1
   flutter_gen_runner: ^5.7.0
   flutter_test:
     sdk: flutter
