--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   build_runner: ^2.4.13
   envied_generator: ^0.5.4+1
   flutter_gen_runner: ^5.7.0
+  flutter_native_splash: ^2.4.1
   flutter_test:
     sdk: flutter
   # Linting & Code Quality
