--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_svg: ^2.0.10
   go_router: ^14.3.0
   envied: ^0.5.4+1
+  flutter_slidable: ^3.1.1
 
 # Geliştirme ve test süreçlerinde kullanılır
 # Uygulamanın çalışması sırasında gerekli değildir.
